Add collection reference + query map